--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <svg class="info-section__nav--icon">
               <use xlink:href="./img/sprite.svg.svg#icon-chevron-small-left"></use>
         </svg>
-          <a href="file:///C:/Users/HP%20USER/Desktop/TESLIM%20PROJECT/personal/index.html?" class="info-section__nav--btn">back</a>
+          <a href="https://authentication-info.netlify.app/" class="info-section__nav--btn">back</a>
         </div>
     </section>
     <section class="change-info">
